--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <hr/>
-      <h3 id="noPets" class="text-center">There's no pets in your PetShop.</h3>
+      <h3 id="noPets" class="text-center" style="display: none;">There's no pets in your PetShop.</h3>
       <button class="btn btn-default btn-addPet text-center" data-toggle="modal" data-target="#addPetModal" type="button" data-id="0">Add pet</button>
       <div id="petsRow" style="padding-top: 20px" class="row">
         <!-- PETS LOAD HERE -->
