--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <strong>Wrong network!</strong> Please switch to the <span id="requiredNetwork">(...)</span> network on MetaMask.
       </div>
     </div>
-    <div id="wrongNetwork" style="display: none;">
+    <div id="noWeb3" style="display: none;">
       <div class="alert alert-danger" role="alert">
         <strong>No wallet!</strong> Please install a <a href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en">MetaMask</a> wallet to proceed.
       </div>
