--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     </div>
     <div id="noWeb3" style="display: none;">
       <div class="alert alert-danger" role="alert">
-        <strong>No wallet!</strong> Please install a <a href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en">MetaMask</a> wallet to proceed.
+        <strong>No wallet!</strong> Please install <a href="https://metamask.io/">MetaMask</a> to proceed.
       </div>
     </div>
     <div class="container">
